# comfyui_bang

./: README.md  __init__.py  example.json  example_debug.json  example_workflow.json  perspective_insert_node.py  perspective_insert_node_debug.py  perspective_insert_node_fix.py  perspective_insert_node_optimized.py  pyproject.toml  requirements.txt
.cursor/rules/: overall.mdc
docs/: 需求文档.md
